kubernetes-gateway-api-hands-on/exercises/08-cross-namespace-routing/exercise/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-team-a-to-shared-api
  namespace: ________
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: ________
      namespace: ________
  to:
    - group: ""
      kind: ________
      name: ________
